CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#modifying libgff for the time being
PROJECT(caviar)

SET(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -O3 -Wall -D_FILE_OFFSET_BITS=64 -std=c++11 -lpthread")

SET(GFFLib_SRCS
    ${PROJECT_SOURCE_DIR}/codons.cpp
    ${PROJECT_SOURCE_DIR}/GArgs.cpp
    ${PROJECT_SOURCE_DIR}/GBase.cpp
    ${PROJECT_SOURCE_DIR}/gdna.cpp
    ${PROJECT_SOURCE_DIR}/GFaSeqGet.cpp
    ${PROJECT_SOURCE_DIR}/GFastaIndex.cpp
    ${PROJECT_SOURCE_DIR}/gff.cpp
    ${PROJECT_SOURCE_DIR}/GStr.cpp)

SET(CAVIAR_SRCS
    ${PROJECT_SOURCE_DIR}/caviar.cpp)

INCLUDE_DIRECTORIES(${PROJECT_INCLUDE_DIR})

ADD_LIBRARY(gff STATIC ${GFFLib_SRCS})
ADD_EXECUTABLE(caviar ${CAVIAR_SRCS})
TARGET_LINK_LIBRARIES(caviar gff)
